fixed section-container-two padding when on mobile device

--- a/styles.css
+++ b/styles.css
@@ -142,6 +142,11 @@ img {
     align-items: center;
 }
 
+.section-two-container {
+    padding-left: 32px;
+    padding-right: 32px
+}
+
 .boxspace {
     display: flex;
     justify-content: space-between;
